Add SQLite backend and CLI flag

--- a/examples/config.example.yaml
+++ b/examples/config.example.yaml
@@ -21,6 +21,7 @@ categories:
   # etc.
 
 data_dir: "./data"
+db_path: "budgify.db"
 
 google:
   service_account_file: "/path/to/service-account.json"
