--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,7 @@ huggingface_hub>=0.33
 python-dotenv>=1.0
 mcp>=1.9
 XlsxWriter>=3.1
-
+fastapi>=0.110
+uvicorn[standard]>=0.22
+Jinja2>=3.1
+python-multipart>=0.0.9
