Expand example categories

--- a/examples/config.example.yaml
+++ b/examples/config.example.yaml
@@ -35,8 +35,11 @@ recurring_transactions:
     # end_date defaults to today if omitted
 
 categories:
-  restaurants: []
+  car: []
   groceries: []
+  misc: []
+  restaurants: []
+  subscription: []
   fun: []
   fuel: []
   # etc.
